force-app/main/default/objects/LLC_BI__Scorecard__c/LLC_BI__Scorecard__c.object-meta.xml
<CustomObject>
    <description>The scorecard object stores information regarding decisions/recommendations that were generated for a product application.</description>
    <label>Scorecard</label>
    <nameField>
        <displayFormat>SC{00000}</displayFormat>
        <label>Score Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>