force-app/main/default/objects/LLC_BI__Scorecard__c/fields/LLC_BI__Assigned_Points__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Assigned_Points__c</fullName>
    <description>The number of points assigned to the product application. This field is optional to include on the scorecard and is automatically populated based on the visual flow logic configuration.</description>
    <label>Assigned Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>