force-app/main/default/objects/LLC_BI__Scorecard__c/fields/LLC_BI__External_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__External_Rule_Name__c</fullName>
    <description>The name of the process that performed the decision. This field will not be visible on the scorecard, it is used to behind the scenes to specify which logic rule was run to generate the scorecard. The external name is set in the rules engine during the configuration of the feature.</description>
    <label>External Rule Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>