force-app/main/default/objects/LLC_BI__Scorecard__c/fields/LLC_BI__Internal_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Internal_Rule_Name__c</fullName>
    <description>The internal name of the process that initiated the score card. This field is not displayed on the scorecard, but is used behind the scenes to generate the scorecard. This is set in the Salesforce Visual Flow tool when saving the logic.</description>
    <label>Internal Rule Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>