force-app/main/default/objects/LLC_BI__Scorecard__c/fields/LLC_BI__Result_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Result_Description__c</fullName>
    <description>--DEPRECATED--DEPRECATED-This field is not in use</description>
    <label>D - Result Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>