force-app/main/default/objects/LLC_BI__Scorecard__c/fields/LLC_BI__Snapshot__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Snapshot__c</fullName>
    <description>The snapshot of the information at the point the scorecard was created. The snapshot is a field behind the scenes that stores the point in time details of the loan and the relationship for the fields being used on the scorecard, when the scorecard was generated. These details are then displayed in the appropriate sections of the score card data, to show point in time data capture, and the score that was assigned it that value.</description>
    <label>Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>